Fix styling columnvisibility list

--- a/popup/tableview/theme/table-theme-dark.css
+++ b/popup/tableview/theme/table-theme-dark.css
@@ -135,9 +135,6 @@ td.details-control {
 .mCS-3d-thick-dark.mCSB_scrollTools .mCSB_buttonRight{ background-position: -40px -128px; }
 
 /* column-visibility checkmarks */
-button.buttons-columnVisibility.active span span.col-select span.check {
-    border-color: #e6e6e6;
-}
 button.buttons-colvis {
     filter: brightness(95%);
 }
